[package]
name = "imgconv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
actix-web = "4.2.1"
actix-web-validator = "5.0.1"
serde = { version = "1.0.152", features = ["derive"] }
validator = { version = "0.16.0", features = ["derive"] }
